[tool.poetry]
name = "crypt"
version = "0.1.0"
description = ""
authors = ["elisman14 <elisman14@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

do = "crypt.__main__:start"
